# private-voting

./: Cargo.toml  README.md  REAL-PROOFS.md  STATUS.md  deployed_contracts.json  interfold.config.yaml  package.json  pnpm-lock.yaml
ballot-validity-circuit/: BallotValidityVerifier.sol  Nargo.toml  README.md  gen-evm-proof.mjs  prove-test.mjs
ballot-validity-circuit/browser-prove-poc/: index.html  main.js  package.json
ballot-validity-circuit/src/: main.nr
client/: package.json
deploy/: ballot-validity-gate.mjs  prove-real-verifier-rejects-fake.sh  run-sepolia.ts  sepolia-round.ts  sepolia-verifiable-round.mjs  sepolia-wasm-round.mjs
program/: Cargo.toml
server/: index.ts
tests/: sepolia-round.spec.ts  wasm-512-roundtrip.mjs
types/: hardhat.d.ts  index.ts
types/.interfold/: index.ts
types/@interfold/contracts/contracts/: E3RefundManager.ts  Interfold.ts  index.ts
types/@interfold/contracts/contracts/lib/: InterfoldPricing.ts  index.ts
types/@interfold/contracts/contracts/registry/: BondingRegistry.ts  CiphernodeRegistryOwnable.ts  index.ts
types/@interfold/contracts/contracts/slashing/: SlashingManager.ts  index.ts
types/@interfold/contracts/contracts/test/: MockDecryptionVerifier.ts  MockE3Program.ts  (+2 more)
types/@openzeppelin/contracts/proxy/: index.ts
types/contracts/: MyProgram.ts  index.ts
types/factories/: index.ts
types/factories/.interfold/: index.ts
types/factories/contracts/: MyProgram__factory.ts  index.ts
types/factories/contracts/Mocks/: MockRISC0Verifier__factory.ts
types/factories/poseidon-solidity/: PoseidonT3__factory.ts
(+69 files in other folders)
